syntax = "proto3";

package goods_list;

option go_package = "./protoc";

message goodsListInfo {
    int64 id = 1;
    string title = 2;
    string cover = 3;
    double prices = 4;
    int64 business_id = 5;
    string business_name = 6;
    int64 stock_num = 7;
}

message goodsListResponse {
    int64 states = 1;
    repeated goodsListInfo good_list = 2;
}

message goodsListRequest {
    int64 type = 1;
    int64 id = 2;
    int64 limit = 3;
}

service GoodsList{
    rpc GoodsList(goodsListRequest) returns (goodsListResponse);
}